# CLI_AI_Agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/built_by_agent/logscope/: README.md  logscope.py  test_logscope.py
src/codecraft_agent/: __init__.py  agent.py  cli.py  config.py  context.py  doctor.py  llm.py  tools.py  ui.py
tests/: test_agent.py  test_config.py  test_llm.py  test_tools.py
