[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codecraft-agent"
version = "0.1.0"
description = "A CLI coding agent powered by raw LLM API calls and local tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CodeCraft Agent" }]
license = { text = "MIT" }
keywords = ["agent", "cli", "llm", "coding-assistant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.scripts]
codecraft = "codecraft_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

